# AgenticAILearning

./: pyproject.toml  requirements.txt
1-Langgraph_Basics/: 1-simplegraph.py  2-chatbot.py  3-DataclassStateSchema.py  4-pydantic.py  5-ChainsLangGraph.py  6-chatbotswithmultiple.py  7-ReAct_Agent_Architecture.py  8-Streaming.py
10-CacheRAG/: cache_augmented_generation.py
11-Chatbot_And_RAG_Evalutaion/: 1-chatbot_evaluation.py  1-rag_evaluation.py  2-rag_evalutaion.py
12-Graph_Databases_And_Cypher_Query_Languages/: experiment.py  promptstatergies.py
2-Debugging/: a_GroqAgent.py  langgraph.json
2-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
3-Agentic_RAG/: 1-agenticrag.py  2-ReAct.py  3-ReAct.py
4-AgenticRAG/: 1-AgenticRAG.py
5-AutonomousRAG/: 1-COTRAG.py  2-SelfReflection.py  3-QueryPlanningDecomposition.py  4-IterativeRAG.py  5-AnswerSynthesis.py
6-Multi_Agents_RAG/: 1-Multiagent.py  2-SupervisorAgent.py  3-Hierarchial_agent.py
7-CorrectiveRAG/: 1-CorrectiveRAG1.py
8-Adaptive_RAG/: 1-AdaptiveRAG.py
9-RAG_with_PersistantMemory/: 1-ragmemory.py
Final_Project/: README.md  streamlit_app.py
Final_Project/src/config/: config.py
Final_Project/src/document_ingestion/: document_processor.py
Final_Project/src/graph_builder/: graph_builder.py
Final_Project/src/nodes/: nodes.py  reactnode.py
Final_Project/src/state/: rag_state.py
Final_Project/src/vectorstore/: vector_store.py
